--- a/trunk/mscore/mscore/transposedialog.ui
+++ b/trunk/mscore/mscore/transposedialog.ui
@@ -364,12 +364,18 @@
            <property name="text">
             <string>Transpose key signatures</string>
            </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="transposeChordNames">
            <property name="text">
             <string>Transpose chord names</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
