--- a/trunk/mscore/mscore/prefsdialog.ui
+++ b/trunk/mscore/mscore/prefsdialog.ui
@@ -1251,14 +1251,14 @@
            <number>6</number>
           </property>
           <item row="0" column="0">
-           <widget class="QLabel" name="label_16">
+           <widget class="QLabel" name="label_15">
             <property name="text">
-             <string>Stop</string>
+             <string>Rewind</string>
             </property>
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="GreendotButton" name="stopActive">
+           <widget class="GreendotButton" name="rewindActive">
             <property name="toolTip">
              <string>is active</string>
             </property>
@@ -1268,7 +1268,34 @@
            </widget>
           </item>
           <item row="0" column="2">
-           <widget class="RecordButton" name="recordStop">
+           <widget class="RecordButton" name="recordRewind">
+            <property name="toolTip">
+             <string>record</string>
+            </property>
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_20">
+            <property name="text">
+             <string>Play</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="GreendotButton" name="playActive">
+            <property name="toolTip">
+             <string>is active</string>
+            </property>
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="RecordButton" name="recordPlay">
             <property name="toolTip">
              <string>record</string>
             </property>
@@ -1278,7 +1305,7 @@
            </widget>
           </item>
           <item row="0" column="3">
-           <spacer>
+           <spacer name="horizontalSpacer_10">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -1289,87 +1316,6 @@
              </size>
             </property>
            </spacer>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_14">
-            <property name="text">
-             <string>Record</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="GreendotButton" name="recordActive">
-            <property name="toolTip">
-             <string>is active</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2">
-           <widget class="RecordButton" name="recordRecord">
-            <property name="toolTip">
-             <string>record</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="label_15">
-            <property name="text">
-             <string>Rewind</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="GreendotButton" name="rewindActive">
-            <property name="toolTip">
-             <string>is active</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="RecordButton" name="recordRewind">
-            <property name="toolTip">
-             <string>record</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="label_20">
-            <property name="text">
-             <string>Play</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="GreendotButton" name="playActive">
-            <property name="toolTip">
-             <string>is active</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="2">
-           <widget class="RecordButton" name="recordPlay">
-            <property name="toolTip">
-             <string>record</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
           </item>
          </layout>
         </widget>
